# lab_1_sorting

./: .gitignore  CMakeLists.txt  Doxygen.bak  main.cpp
set_data/: model_data_0.json  model_data_1.json  model_data_2.json  model_data_3.json  model_data_4.json  model_data_5.json  model_data_6.json
src/: CMakeLists.txt
src/generator/: generator.cpp  generator.hpp
src/model/: CMakeLists.txt  model.cpp  model.hpp
src/sorting/: sorting.cpp  sorting.hpp
